--- a/index.html
+++ b/index.html
@@ -58,14 +58,15 @@
     <div>
         <!-- White Space - possibly delete for margin later -->
     </div>
+    <div>
+        <h3>Call to action! It's Time!</h3>
+        <p>Sign up for our product by clicking that button right over there!</p>
+    </div>
+    <div>
+        <button type="button">Sign Up</button>
+    </div>
     <footer>
-        <div>
-            <h3>Call to action! It's Time!</h3>
-            <p>Sign up for our product by clicking that button right over there!</p>
-        </div>
-        <div>
-            <button type="button">Sign Up</button>
-        </div>
+        <div><p>Copyright © The Odin Project</p></div>
     </footer>
 </body>
 
