--- a/index.html
+++ b/index.html
@@ -8,65 +8,76 @@
 </head>
 
 <body>
-
-</body>
-
-</html>
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
     <nav>
-        <div>
+        <div class="navigation">
             <h3>Header Logo</h3>
             <a href="#">header link one</a>
             <a href="#">header link two</a>
             <a href="#">header link three</a>
         </div>
     </nav>
-    <div>
-        <div>
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is
-                lower contrast</p>
-            <button type="button">Sign Up</button>
+    <div class="body">
+        <div class="header">
+            <div>
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color
+                    is
+                    lower contrast</p>
+                <button type="button">Sign Up</button>
+            </div>
+            <div class="large-image">
+                <p>this is a placeholder for an image</p>
+            </div>
+        </div>
+        <div class="information">
+            <h2 class="information-header">Some random information.</h2>
+            <div class="card-container">
+                <div class="card">
+                    <div class="image">
+                    </div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <div class="image">
+                    </div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <div class="image">
+                    </div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <div class="image">
+                    </div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </div>
+        <div class="quote-section">
+            <p class="quote"><em>This is an inspring quote, or a testimonial from a customer. Maybe it's just filling up
+                    space, or
+                    maybe
+                    people will actually read it. Who knows? All I know is that it looks nice.</em></p>
+            <p class="source"><strong>-Thor, God of Thunder</strong></p>
         </div>
         <div>
-            <img src="#" alt="This is a placeholder for an image">
+            <!-- White Space - possibly delete for margin later -->
         </div>
-    </div>
-    <div>
-        <h2>Some random information.</h2>
-        <div>
-            <!-- Square -->
-            <!-- Text -->
+        <div class="CTA-section">
+            <div>
+                <h3>Call to action! It's Time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div>
+                <button type="button" class="button CTA-button">Sign Up</button>
+            </div>
         </div>
-    </div>
-    <div>
-        <p><em>This is an inspring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
-                people will actually read it. Who knows? All I know is that it looks nice.</em></p>
-        <p><strong>-Thor, God of Thunder</strong></p>
-    </div>
-    <div>
-        <!-- White Space - possibly delete for margin later -->
-    </div>
-    <div>
-        <h3>Call to action! It's Time!</h3>
-        <p>Sign up for our product by clicking that button right over there!</p>
-    </div>
-    <div>
-        <button type="button">Sign Up</button>
     </div>
     <footer>
-        <div><p>Copyright © The Odin Project</p></div>
+        <div>
+            <p>Copyright © The Odin Project</p>
+        </div>
     </footer>
 </body>
 
