--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <div class="body">
     <nav>
         <div class="navigation">
             <h3>Header Logo</h3>
@@ -16,13 +17,16 @@
             <a href="#">header link three</a>
         </div>
     </nav>
-    <div class="body">
+
         <div class="header">
             <div>
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color
-                    is
-                    lower contrast</p>
+                <div class="header-text">
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the
+                        color
+                        is
+                        lower contrast</p>
+                </div>
                 <button type="button">Sign Up</button>
             </div>
             <div class="large-image">
